--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
   </head>
   <body class="position-fixed">
     <!--nav here-->
-    <!-- <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
+    <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
       <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_ObshHL.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
       <h5 class="  text-left font-weight-bold">Loading </h5>
-    </div> -->
+    </div>
     <nav class="navbar d-flex w-100 fixed-top nav-bg align-items-center justify-content-center ">
   <a class="navbar-brand" href="#"><img src="img/Logo.png" width="150px"
       ></a>
