remove tilt js tilt ffect

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
               <p class="text-white description mt-5"> Smooth and Strong</p>
         </div>
         <div class="row">
-          <div data-tilt style="transform: perspective(300px)" class="col-md-3 data-tilt ">
+          <div class="col-md-3  ">
             <div  style="height:500px;" class=" m-2 bdr-primary smooth-card p-3 d-flex bdr-primary flex-column align-items-center justify-content-center">
               <img src="img/sm.png" width="150px" alt="">
               <h1 class="text-white bottle-title">Smooth</h1>
-              <h2 class="bottle-title  strong-card-alc"> Alcohol 4.7%</h2>
+              <h2 class="bottle-title  smooth-card-alc"> Alcohol 4.7%</h2>
             </div>
           </div>
           <div class="col-md-6">
@@ -111,13 +111,14 @@
                 <img src="img/f-removebg-preview.png" width="100%" alt="">
               </div>
             </div>
+            <h5 class="text-center color-primary ">Swipe Right  <span class="iconify color-primary" data-icon="akar-icons:arrow-right" data-inline="false"></span></h5>
           </div>
-          <div  data-tilt style="transform: perspective(300px)" 
-          class="col-md-3 data-tilt  ">
+          <div 
+          class="col-md-3  ">
             <div style="height:500px;" class=" m-2 bdr-primary strong-card p-3 d-flex bdr-primary flex-column align-items-center justify-content-center">
               <img src="img/st.png" width="150px" alt="">
               <h1 class="text-white bottle-title">Strong</h1>
-              <h2 class="bottle-title color-primary smooth-card-alc"> Alcohol 6%</h2> 
+              <h2 class="bottle-title color-primary strong-card-alc"> Alcohol 6%</h2> 
             </div>
           </div>
         </div>
