--- a/index.html
+++ b/index.html
@@ -22,8 +22,36 @@
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+  
   </head>
   <body class="position-fixed">
+    <!-- Messenger Chat Plugin Code -->
+    <div id="fb-root"></div>
+
+    <!-- Your Chat Plugin code -->
+    <div id="fb-customer-chat" class="fb-customerchat">
+    </div>
+
+    <script>
+      var chatbox = document.getElementById('fb-customer-chat');
+      chatbox.setAttribute("page_id", "100514112238059");
+      chatbox.setAttribute("attribution", "biz_inbox");
+      window.fbAsyncInit = function() {
+        FB.init({
+          xfbml            : true,
+          version          : 'v10.0'
+        });
+      };
+
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+    </script>
+
     <!--nav here-->
     <!-- <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
       <lottie-player src="https://assets9.lottiefiles.com/packages/lf20_ObshHL.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
@@ -201,8 +229,8 @@
           <div class="col-md-9">
             <img src="img/Asset 52@2x.png"  class="mb-3" width="150px">
             <p class="text-white"></p>
-            <h4 class="color-primary mb-3">Baho Road , 32 ward, Kamayut </h4>
-            <h4 class="color-primary mb-3">09-776045776 </h4>
+            <h4 class="contact-info text-white mb-3">Baho Road , 32 ward, Kamayut </h4>
+            <h4 class="contact-info text-white mb-3">09-776045776 </h4>
           </div>
           <div class="col-md-3">
             <div class="row">
