--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   
   </head>
-  <body class="position">
+  <body class="position-fixed">
     <!-- Messenger Chat Plugin Code -->
     <div id="fb-root"></div>
 
@@ -70,10 +70,10 @@
     </script>
 
     <!--nav here-->
-    <!-- <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
+   <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
       <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_r83sYF.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player>
       <h5 class="  text-left font-weight-bold">Loading </h5>
-    </div> -->
+    </div> 
     <nav class="navbar d-flex w-100 fixed-top position-absolut  bg-nav align-items-center justify-content-center ">
       <a class="navbar-brand" href="#"><img src="img/Logo.png" width="150px"></a>
     </nav>  
