--- a/index.html
+++ b/index.html
@@ -122,9 +122,11 @@
             
           </div>
           <div class="col-md-8 d-flex ">
-            <div class="text-left p-5 bdr-primary m-5">
-              <h1  class="about-title color-primary">သင့်အတွက်ထုတ်လုပ်ထားသော Local Made Cocktail</h1>
-              <p  class="text-white description mt-5"> လူမျိုးမရွေး ဘာသာမရွေး သောက်သုံးနိုင်ပါသည်။</p>
+            <div class="mt-3">
+              <div class="text-left p-5 bdr-primary m-2">
+                <h1  class="about-title color-primary"><span class="mm-font">သင့်အတွက်ထုတ်လုပ်ထားသော </span>Local Made Cocktail</h1>
+                <p  class="text-white description mm-font mt-5"> လူမျိုးမရွေး ဘာသာမရွေး သောက်သုံးနိုင်ပါသည်။</p>
+              </div>
             </div>
           </div>
         </div>
