--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/loading-bar.css">
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <script src="js/jquery.min.js"></script>
     <script src="js/waitforimages.min.js"></script>
     <script src="js/Tweenmax.min.js"></script>
-    <!-- <script src="js/pace.js"></script> -->
+    <script src="js/pace.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -72,8 +73,13 @@
     <!--nav here-->
    <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
     <div style="width:300px;" id="lottie"></div>
+    <div style="width:300px;">
+      <div id="preloader">
+        
+      </div>
+    </div>
     <!-- <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_r83sYF.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player> -->
-      <h5 class="  text-left font-weight-bold">Loading </h5>
+      <!-- <h5 class="  text-left font-weight-bold">Loading </h5> -->
     </div> 
     <nav class="navbar d-flex w-100 fixed-top position-absolut  bg-nav align-items-center justify-content-center ">
       <a class="navbar-brand" href="#"><img src="img/Logo.png" width="150px"></a>
@@ -278,10 +284,11 @@
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.0.3/tilt.jquery.min.js" integrity="sha512-14AZ/DxUrlF26z6v7egDkpJHKyJRn/7ue2BgpWZ/fmqrqVzf4PrQnToy99sHmKwzKev/VZ1tjPxusuTV/n8CcQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.8/lottie.min.js" integrity="sha512-w58XJ/0dVbEfZVJoJyBUOTMGBWmIW4jEYJSA0898d2L0Ghpum0FvwK7qTuHhkTctApzrchv3Neli+28ajI4+fg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  
     <script src="js/main.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/Tweenmax.min.js"></script>
-    <!-- <script src="js/pace.js"></script> -->
+   
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
    
