added progress bar position

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_r83sYF.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player> -->
       <!-- <h5 class="  text-left font-weight-bold">Loading </h5> -->
     </div> 
-    <nav class="navbar d-flex w-100 fixed-top position-absolut  bg-nav align-items-center justify-content-center ">
+    <nav style="z-index:100 !important;" class="navbar d-flex w-100 fixed-top position-absolut  bg-nav align-items-center justify-content-center ">
       <a class="navbar-brand" href="#"><img src="img/Logo.png" width="150px"></a>
     </nav>  
     <!-- main carousel here-->
