--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
           <div class="col-md-12">
             <div class="text-overlay flex-column d-flex align-items-center justify-content-center">
               <div class="text-left text-container">
-                <h1 class="main-title color-primary mt-5">harrison</h1>
-                <h5 class="sub-title"> Burmese Cocktail </h5>
-                <p class="text-white">Myanmar's First Local Made Cocktail</p>
+                <img src="img/Logo.png" width="300px;" alt="">
+                <!-- <h1 class="main-title color-primary mt-5">harrison</h1> -->
+                <h5 class="sub-title">We Care Your Taste </h5>
+                <p class=" hero-desc text-white"><span class="mm-font">မြန်မာ့ပထမဦးဆုံး</span>Local Made Cocktail</p>
               </div>     
             </div>
           </div>
