--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/waitforimages.min.js"></script>
     <script src="js/Tweenmax.min.js"></script>
-    <script src="js/pace.js"></script>
+    <!-- <script src="js/pace.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
     <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -72,8 +72,10 @@
 
     <!--nav here-->
    <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
-    <div style="width:300px;" id="lottie"></div>
+    <div style="width:200px;" id="anim">
+    <img id="loader" src="img/bottlebefore-removebg-preview.png" width="100%" alt=""></div>
     <div style="width:300px;">
+     
       <div id="preloader">
         
       </div>
