added more bottle photos

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
 
   <!--nav here-->
   <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
-    <div style="width:200px;">
-      <div id="lottie">
+    <div style="width:250px;" class="d-flex align-items-center justify-content-center flex-column">
+      <div style="width:200px;" id="lottie">
 
       </div>
-      <div class="text-center" id="box"></div>
+      <div class="text-center pl-3" id="box"></div>
       <!-- <gif-player id="loader" frame="-1"  src="" speed="0.5" play></gif-player> -->
       <!-- <img id="loader" src="img/bottlebefore-removebg-preview.png" width="100%" alt=""></div> -->
 
@@ -185,7 +185,19 @@
         <div class="col-md-6">
           <div class="slider-bottles">
             <div>
-              <img src="img/b-removebg-preview (1).png" width="100%" alt="">
+              <img src="img/a-removebg-preview.png" width="100%" alt="">
+            </div>
+            <div>
+              <img src="img/b-removebg-preview.png" width="100%" alt="">
+            </div>
+            <div>
+              <img src="img/c-removebg-preview.png" width="100%" alt="">
+            </div>
+            <div>
+              <img src="img/d-removebg-preview.png" width="100%" alt="">
+            </div>
+            <div>
+              <img src="img/e-removebg-preview.png" width="100%" alt="">
             </div>
             <div>
               <img src="img/f-removebg-preview.png" width="100%" alt="">
