--- a/index.html
+++ b/index.html
@@ -8,6 +8,26 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+  <!-- Primary Meta Tags -->
+  <title>မြန်မာ့ပထမဦးဆုံးLocal Cocktail</title>
+  <meta name="title" content="မြန်မာ့ပထမဦးဆုံးLocal Cocktail">
+  <meta name="description" content="sales@harrisonburmese.shop | +959 776045776">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://www.harrisonburmese.shop/">
+  <meta property="og:title" content="မြန်မာ့ပထမဦးဆုံးLocal Cocktail">
+  <meta property="og:description" content="sales@harrisonburmese.shop | +959 776045776">
+  <meta property="og:image" content="https://i.ibb.co/4SQnwkw/HRS-3-min.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="http://www.harrisonburmese.shop/">
+  <meta property="twitter:title" content="မြန်မာ့ပထမဦးဆုံးLocal Cocktail">
+  <meta property="twitter:description" content="sales@harrisonburmese.shop | +959 776045776">
+  <meta property="twitter:image" content="https://i.ibb.co/4SQnwkw/HRS-3-min.png">
+  
   <title>Harrison Burmese</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
