--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Primary Meta Tags -->
 
-
+ 
 
   <title>Harrison Burmese</title>
 
@@ -64,11 +64,10 @@
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-  <script data-ad-client="ca-pub-7455669631158218" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-7455669631158218" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196093185-1"></script>
-
+  
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -80,7 +79,7 @@
 </head>
 
 <body class="position-fixed">
-
+  
   <!-- Messenger Chat Plugin Code -->
   <div id="fb-root"></div>
 
@@ -108,13 +107,7 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  <!-- Harrison -->
-  <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-7455669631158218" data-ad-slot="6118776825"
-    data-ad-format="auto" data-full-width-responsive="true"></ins>
-  <script>
-    (adsbygoogle = window.adsbygoogle || []).push({});
-  </script>
+
   <!--nav here-->
   <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
     <div style="width:250px;" class="d-flex align-items-center justify-content-center flex-column">
@@ -139,6 +132,17 @@
     class="navbar d-flex w-100 fixed-top position-absolut  bg-nav align-items-center justify-content-center ">
     <a class="navbar-brand" href="#"><img src="img/Logo.png" width="150px"></a>
   </nav>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Harrison -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-7455669631158218"
+     data-ad-slot="6118776825"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <!-- main carousel here-->
   <section class="hero">
     <!-- <div class="row  p-0 m-0" style="margin-top:5%;">
