--- a/index.html
+++ b/index.html
@@ -8,31 +8,9 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
-  <!-- Primary Meta Tags -->
-
- 
-
   <title>Harrison Burmese</title>
-
-
+  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="title" content="မြန်မာ့ပထမဦးဆုံးLocal Cocktail">
-  <meta name="description" content="sales@harrisonburmese.shop | +959 776045776">
-
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="http://www.harrisonburmese.shop/">
-  <meta property="og:title" content="မြန်မာ့ပထမဦးဆုံးLocal Cocktail">
-  <meta property="og:description" content="sales@harrisonburmese.shop | +959 776045776">
-  <meta property="og:image" content="https://i.ibb.co/4SQnwkw/HRS-3-min.png">
-
-  <!-- Twitter -->
-  <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="http://www.harrisonburmese.shop/">
-  <meta property="twitter:title" content="မြန်မာ့ပထမဦးဆုံးLocal Cocktail">
-  <meta property="twitter:description" content="sales@harrisonburmese.shop | +959 776045776">
-  <meta property="twitter:image" content="https://i.ibb.co/4SQnwkw/HRS-3-min.png">
   <link rel="stylesheet" href="">
   <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-icon-60x60.png">
@@ -67,7 +45,6 @@
   <script data-ad-client="ca-pub-7455669631158218" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196093185-1"></script>
-  
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
@@ -79,7 +56,6 @@
 </head>
 
 <body class="position-fixed">
-  
   <!-- Messenger Chat Plugin Code -->
   <div id="fb-root"></div>
 
@@ -107,14 +83,13 @@
     }(document, 'script', 'facebook-jssdk'));
   </script>
 
-
   <!--nav here-->
   <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
-    <div style="width:250px;" class="d-flex align-items-center justify-content-center flex-column">
-      <div style="width:200px;" id="lottie">
+    <div style="width:200px;">
+      <div id="lottie">
 
       </div>
-      <div class="text-center pl-3" id="box"></div>
+      <div class="text-center" id="box"></div>
       <!-- <gif-player id="loader" frame="-1"  src="" speed="0.5" play></gif-player> -->
       <!-- <img id="loader" src="img/bottlebefore-removebg-preview.png" width="100%" alt=""></div> -->
 
@@ -132,17 +107,6 @@
     class="navbar d-flex w-100 fixed-top position-absolut  bg-nav align-items-center justify-content-center ">
     <a class="navbar-brand" href="#"><img src="img/Logo.png" width="150px"></a>
   </nav>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Harrison -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-7455669631158218"
-     data-ad-slot="6118776825"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
   <!-- main carousel here-->
   <section class="hero">
     <!-- <div class="row  p-0 m-0" style="margin-top:5%;">
@@ -222,19 +186,7 @@
         <div class="col-md-6">
           <div class="slider-bottles">
             <div>
-              <img src="img/a-removebg-preview.png" width="100%" alt="">
-            </div>
-            <div>
-              <img src="img/b-removebg-preview.png" width="100%" alt="">
-            </div>
-            <div>
-              <img src="img/c-removebg-preview .png" width="100%" alt="">
-            </div>
-            <div>
-              <img src="img/d-removebg-preview.png" width="100%" alt="">
-            </div>
-            <div>
-              <img src="img/e-removebg-preview.png" width="100%" alt="">
+              <img src="img/b-removebg-preview (1).png" width="100%" alt="">
             </div>
             <div>
               <img src="img/f-removebg-preview.png" width="100%" alt="">
