--- a/index.html
+++ b/index.html
@@ -186,10 +186,22 @@
         <div class="col-md-6">
           <div class="slider-bottles">
             <div>
-              <img src="img/b-removebg-preview (1).png" width="100%" alt="">
+              <img src="img/b-removebg-preview.png" width="100%" alt="">
             </div>
             <div>
               <img src="img/f-removebg-preview.png" width="100%" alt="">
+            </div>
+            <div>
+              <img src="img/a-removebg-preview.png" width="100%" alt="">
+            </div>
+            <div>
+              <img src="img/c-removebg-preview .png" width="100%" alt="">
+            </div>
+            <div>
+              <img src="img/d-removebg-preview.png" width="100%" alt="">
+            </div>
+            <div>
+              <img src="img/e-removebg-preview.png" width="100%" alt="">
             </div>
           </div>
           <h5 class="text-center color-primary ">Swipe Right <span class="iconify color-primary"
