--- a/index.html
+++ b/index.html
@@ -9,9 +9,26 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Harrison Burmese</title>
-  <meta name="description" content="">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="">
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="မြန်မာ့ပထမဦးဆုံး Local Cocktail">
+  <meta name="description" content="Order Now | sales@harrisonburmese.shop | +959 776045776">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://www.harrisonburmese.shop/">
+  <meta property="og:title" content="မြန်မာ့ပထမဦးဆုံး Local Cocktail">
+  <meta property="og:description" content="Order Now | sales@harrisonburmese.shop | +959 776045776">
+  <meta property="og:image" content="https://i.ibb.co/4SQnwkw/HRS-3-min.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="https://i.ibb.co/4SQnwkw/HRS-3-min.png">
+  <meta property="twitter:url" content="https://www.harrisonburmese.shop/">
+  <meta property="twitter:title" content="မြန်မာ့ပထမဦးဆုံး Local Cocktail">
+  <meta property="twitter:description" content="Order Now | sales@harrisonburmese.shop | +959 776045776">
+  <meta property="twitter:image" content="https://i.ibb.co/4SQnwkw/HRS-3-min.png">
+
   <link rel="apple-touch-icon" sizes="57x57" href="img/icons/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="img/icons/apple-icon-60x60.png">
   <link rel="apple-touch-icon" sizes="72x72" href="img/icons/apple-icon-72x72.png">
@@ -42,7 +59,8 @@
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-  <script data-ad-client="ca-pub-7455669631158218" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script data-ad-client="ca-pub-7455669631158218" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196093185-1"></script>
   <script>
