--- a/index.html
+++ b/index.html
@@ -50,10 +50,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/loading-bar.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <script src="js/jquery.min.js"></script>
-  <script src="js/waitforimages.min.js"></script>
-  <script src="js/Tweenmax.min.js"></script>
-  <script src="js/gifplayer.min.js"></script>
+  <script src="js/plugins.min.js"></script>
   <!-- <script src="js/pace.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
@@ -72,54 +69,21 @@
   </script>
 
 </head>
-
 <body class="position-fixed">
   <!-- Messenger Chat Plugin Code -->
   <div id="fb-root"></div>
-
   <!-- Your Chat Plugin code -->
   <div id="fb-customer-chat" class="fb-customerchat">
   </div>
-
-  <script>
-    var chatbox = document.getElementById('fb-customer-chat');
-    chatbox.setAttribute("page_id", "100514112238059");
-    chatbox.setAttribute("attribution", "biz_inbox");
-    window.fbAsyncInit = function() {
-      FB.init({
-        xfbml            : true,
-        version          : 'v11.0'
-      });
-    };
-
-    (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
+  <script src="js/chatbox.js">
   </script>
-
   <!--nav here-->
   <div id="loading" class="loading-wrapper loading d-flex flex-column align-items-center justify-content-center">
     <div style="width:200px;">
       <div id="lottie">
-
       </div>
       <div class="text-center" id="box"></div>
-      <!-- <gif-player id="loader" frame="-1"  src="" speed="0.5" play></gif-player> -->
-      <!-- <img id="loader" src="img/bottlebefore-removebg-preview.png" width="100%" alt=""></div> -->
-
-      <!--       
-        <div id="preloader">
-          
-        </div> -->
-
-
     </div>
-    <!-- <lottie-player src="https://assets10.lottiefiles.com/packages/lf20_r83sYF.json"  background="transparent"  speed="1"  style="width: 300px; height: 300px;"  loop  autoplay></lottie-player> -->
-    <!-- <h5 class="  text-left font-weight-bold">Loading </h5> -->
   </div>
   <nav style="z-index:100 !important;"
     class="navbar d-flex w-100 fixed-top position-absolut  bg-nav align-items-center justify-content-center ">
@@ -127,31 +91,14 @@
   </nav>
   <!-- main carousel here-->
   <section class="hero">
-    <!-- <div class="row  p-0 m-0" style="margin-top:5%;">
-        <div class="col-md-6 hero-text-col d-flex align-items-center justify-content-center">
-          <div class="text-right text-container">
-            <h1 class="main-title text-white">harrison</h1>
-            <h5 class="sub-title text-right"> Burmese Cocktail </h5>
-            <h6 class="sub-title  text-right mm-font">ရွှေမြန်မာတို့အတွက် Cocktail</h6>
-          </div>
-        </div>
-        <div class="col-md-6 photo-col m-0 p-0 overflow-hidden">
-          <div class="photo-col-overlay"></div>
-        </div>
-      </div> -->
     <div class="hero-overlay d-flex align-items-center justify-content-center">
     </div>
-    <!-- <div style="width:700px;height:700px;overflow:hidden;" >
-        <img src="img/Final/HRS (2).jpg" width="100%" alt="">
-      
-      </div> -->
     <div class="container">
       <div class="row">
         <div class="col-md-12">
           <div class="text-overlay flex-column d-flex align-items-center justify-content-center">
             <div class="text-left text-container">
               <img src="img/Logo.png" width="300px;" alt="">
-              <!-- <h1 class="main-title color-primary mt-5">harrison</h1> -->
               <h5 class="sub-title">We Care Your Taste </h5>
               <p class=" hero-desc text-white"><span class="mm-font">မြန်မာ့ပထမဦးဆုံး</span>Local Made Cocktail</p>
             </div>
@@ -168,7 +115,6 @@
           <img style="transform: translateZ(50px)" class="mt-2" src="img/Logo.png" width="80%" alt="">
           <div class="">
           </div>
-
         </div>
         <div class="col-md-8 d-flex ">
           <div class="mt-3">
@@ -180,10 +126,7 @@
           </div>
         </div>
       </div>
-
     </div>
-
-
   </section>
   <section class="  mt-3">
     <div class="container mb-5">
@@ -234,24 +177,6 @@
           </div>
         </div>
       </div>
-      <!-- <div class="row">
-          <div class="col-md-4 d-flex   ">
-            <div class="text-right p-5 m-5 bdr-lft">
-              <h1 class=" color-primary mm-font type-title"><strong style="font-size:100px;">Type</strong><br> ဘယ်နှစ်မျိုးရှိလဲ?</h1>
-              <p class="text-white description mt-5"> Smooth and Strong</p>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="row  mt-5">
-              <div class="col-md-6 p-5 d-flex flex-column justify-content-center align-items-center">
-                <img data-tilt class="tilt-test " style="transform: perspective(300px)" src="img/sm.png" width="200px" alt="">
-              </div>
-              <div class="col-md-6 p-5 d-flex flex-column justify-content-center align-items-center">
-                <img data-tilt class="tilt-test " style="transform: perspective(300px)" src="img/st.png" width="200px" alt="">
-              </div>
-            </div>
-          </div>
-        </div> -->
     </div>
   </section>
   <section>
@@ -301,7 +226,6 @@
           <img src="img/Final/IMG_8441.jpg" width="100%" alt="">
         </div>
       </div>
-
     </div>
     <div class="container m-0 p-0">
     </div>
@@ -336,26 +260,10 @@
       </div>
     </div>
   </footer>
-  <script>
-
-  </script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.0.3/tilt.jquery.min.js" integrity="sha512-14AZ/DxUrlF26z6v7egDkpJHKyJRn/7ue2BgpWZ/fmqrqVzf4PrQnToy99sHmKwzKev/VZ1tjPxusuTV/n8CcQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
-  <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.8/lottie.min.js"
-    integrity="sha512-w58XJ/0dVbEfZVJoJyBUOTMGBWmIW4jEYJSA0898d2L0Ghpum0FvwK7qTuHhkTctApzrchv3Neli+28ajI4+fg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+  <script src="js/lottie.min.js"></script>
   <script src="js/main.js"></script>
-  <script src="js/jquery.min.js"></script>
-  <script src="js/Tweenmax.min.js"></script>
-
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
-
-  <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   <script src="" async defer></script>
-
-
 </body>
 
 </html>
