hover images optimized

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="col-md-4 m-0 p-0 bottle-item d-flex">
           <div class="hover-img">
             <h5 class="text-white hover-title">Lusty Blast</h5>
-            <img src="img/f.png" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img src="img/f.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
           <!-- <img src="img/a.png" class="hover-img" alt=""> -->
           <img src="img/Final/HRS (5).jpg" width="100%" alt="">
@@ -192,35 +192,35 @@
         <div class="col-md-4 m-0 p-0 bottle-item" data-tilt>
           <div class="hover-img">
             <h5 class="text-white hover-title">Ivy Queen</h5>
-            <img src="img/d.png" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img src="img/d.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
           <img src="img/Final/HRS (6).jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item">
           <div class="hover-img">
             <h5 class="text-white hover-title">Devil Kiss</h5>
-            <img src="img/b.png" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img src="img/b.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
           <img src="img/Final/IMG_8438.jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item">
           <div class="hover-img">
             <h5 class="text-white hover-title">Absolute Romance</h5>
-            <img src="img/c.png" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img src="img/c.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
           <img src="img/Final/IMG_8439.jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item">
           <div class="hover-img">
             <h5 class="text-white hover-title">Summer Twister</h5>
-            <img src="img/a.png" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img src="img/a.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
           <img src="img/Final/IMG_8440.jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item">
           <div class="hover-img">
             <h5 class="text-white hover-title">Til The Dusk</h5>
-            <img src="img/e.png" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img src="img/e.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
           <img src="img/Final/IMG_8441.jpg" width="100%" alt="">
         </div>
