--- a/index.html
+++ b/index.html
@@ -48,24 +48,25 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/loading-bar.css">
+  <link disabled rel="stylesheet" href="css/loading-bar.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <script src="js/plugins.min.js"></script>
+  <script async src="js/plugins.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.7.11/lottie.min.js" integrity="sha512-jbTBHn1aXqglu6As1bUWxdPYc9b1uMHtreBM30oW3HbNFDS/eO1n+f98l4qcmw2l7CAdjWSbu3wVjm9SKISOaw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- <script src="js/pace.js"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
+  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
-  <script data-ad-client="ca-pub-7455669631158218" async
-    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <script defer src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+  <!-- <script data-ad-client="ca-pub-7455669631158218" async
+    src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196093185-1"></script>
-  <script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-196093185-1"></script> -->
+  <!-- <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-196093185-1');
-  </script>
+  </script> -->
 
 </head>
 <body class="position-fixed">
@@ -259,9 +260,9 @@
       </div>
     </div>
   </footer>
-  <script src="js/lottie.min.js"></script>
-  <script src="js/main.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
+  <script async src="js/lottie.min.js"></script>
+  <script async src="js/main.js"></script>
+  <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
   <script src="" async defer></script>
 </body>
 
