--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link disabled rel="stylesheet" href="css/loading-bar.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-  <script async src="js/plugins.min.js"></script>
+  <script  src="js/plugins.min.js"></script>
  
   <!-- <script src="js/pace.js"></script> -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
@@ -262,7 +262,7 @@
   </footer>
   <script src="js/lottie.min.js"></script>
   <script async src="js/main.js"></script>
-  <script async src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
+  <script  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
   <script src="" async defer></script>
 </body>
 
