revert slick local to cdn

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
   <link disabled rel="stylesheet" href="css/loading-bar.css">
-  <link rel="stylesheet" type="text/css" href="css/slick.min.css" />
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <script  src="js/plugins.min.js"></script>
+
   <!-- <script src="js/pace.js"></script> -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
   <script defer src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
