revert back to lazy loading to loading

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   <link disabled rel="stylesheet" href="css/loading-bar.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <script  src="js/plugins.min.js"></script>
-
   <!-- <script src="js/pace.js"></script> -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script defer src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
   <!-- <script data-ad-client="ca-pub-7455669631158218" async
     src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> -->
@@ -260,7 +260,7 @@
     </div>
   </footer>
   <script src="js/lottie.min.js"></script>
-  <script async src="js/main.js"></script>
+  <script  src="js/main.js"></script>
   <script  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
   <script src="" async defer></script>
 </body>
