changed img async

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
   </div>
   <nav style="z-index:100 !important;"
     class="navbar d-flex w-100 fixed-top position-absolut  bg-nav align-items-center justify-content-center ">
-    <a class="navbar-brand" href="#"><img src="img/Logo.png" width="150px"></a>
+    <a class="navbar-brand" href="#"><img async-src="img/Logo.png" width="150px"></a>
   </nav>
   <!-- main carousel here-->
   <section class="hero">
@@ -97,7 +97,7 @@
         <div class="col-md-12">
           <div class="text-overlay flex-column d-flex align-items-center justify-content-center">
             <div class="text-left text-container">
-              <img src="img/Logo.png" width="300px;" alt="">
+              <img async-src="img/Logo.png" width="300px;" alt="">
               <h5 class="sub-title">We Care Your Taste </h5>
               <p class=" hero-desc text-white"><span class="mm-font">မြန်မာ့ပထမဦးဆုံး</span>Local Made Cocktail</p>
             </div>
@@ -138,7 +138,7 @@
         <div class="col-md-3  ">
           <div style="height:500px;"
             class=" m-2 bdr-primary smooth-card p-3 d-flex bdr-primary flex-column align-items-center justify-content-center">
-            <img src="img/sm.png" width="150px" alt="">
+            <img async-src="img/sm.png" width="150px" alt="">
             <h1 class="text-white bottle-title">Smooth</h1>
             <h2 class="bottle-title  smooth-card-alc"> Alcohol 4.7%</h2>
           </div>
@@ -146,22 +146,22 @@
         <div class="col-md-6">
           <div class="slider-bottles">
             <div>
-              <img src="img/b-removebg-preview.png" width="100%" alt="">
+              <img async-src="img/b-removebg-preview.png" width="100%" alt="">
             </div>
             <div>
-              <img src="img/f-removebg-preview.png" width="100%" alt="">
+              <img async-src="img/f-removebg-preview.png" width="100%" alt="">
             </div>
             <div>
-              <img src="img/a-removebg-preview.png" width="100%" alt="">
+              <img async-src="img/a-removebg-preview.png" width="100%" alt="">
             </div>
             <div>
-              <img src="img/c-removebg-preview .png" width="100%" alt="">
+              <img async-src="img/c-removebg-preview .png" width="100%" alt="">
             </div>
             <div>
-              <img src="img/d-removebg-preview.png" width="100%" alt="">
+              <img async-src="img/d-removebg-preview.png" width="100%" alt="">
             </div>
             <div>
-              <img src="img/e-removebg-preview.png" width="100%" alt="">
+              <img async-src="img/e-removebg-preview.png" width="100%" alt="">
             </div>
           </div>
           <h5 class="text-center color-primary ">Swipe Right <span class="iconify color-primary"
@@ -170,7 +170,7 @@
         <div class="col-md-3  ">
           <div style="height:500px;"
             class=" m-2 bdr-primary strong-card p-3 d-flex bdr-primary flex-column align-items-center justify-content-center">
-            <img src="img/st.png" width="150px" alt="">
+            <img async-src="img/st.png" width="150px" alt="">
             <h1 class="text-white bottle-title">Strong</h1>
             <h2 class="bottle-title color-primary strong-card-alc"> Alcohol 6%</h2>
           </div>
@@ -184,45 +184,45 @@
         <div class="col-md-4 m-0 p-0 bottle-item d-flex">
           <div class="hover-img">
             <h5 class="text-white hover-title">Lusty Blast</h5>
-            <img src="img/f.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img async-src="img/f.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
-          <!-- <img src="img/a.png" class="hover-img" alt=""> -->
-          <img src="img/Final/HRS (5).jpg" width="100%" alt="">
+          <!-- <img async-src="img/a.png" class="hover-img" alt=""> -->
+          <img async-src="img/Final/HRS (5).jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item" data-tilt>
           <div class="hover-img">
             <h5 class="text-white hover-title">Ivy Queen</h5>
-            <img src="img/d.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img async-src="img/d.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
-          <img src="img/Final/HRS (6).jpg" width="100%" alt="">
+          <img async-src="img/Final/HRS (6).jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item">
           <div class="hover-img">
             <h5 class="text-white hover-title">Devil Kiss</h5>
-            <img src="img/b.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img async-src="img/b.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
-          <img src="img/Final/IMG_8438.jpg" width="100%" alt="">
+          <img async-src="img/Final/IMG_8438.jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item">
           <div class="hover-img">
             <h5 class="text-white hover-title">Absolute Romance</h5>
-            <img src="img/c.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img async-src="img/c.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
-          <img src="img/Final/IMG_8439.jpg" width="100%" alt="">
+          <img async-src="img/Final/IMG_8439.jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item">
           <div class="hover-img">
             <h5 class="text-white hover-title">Summer Twister</h5>
-            <img src="img/a.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img async-src="img/a.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
-          <img src="img/Final/IMG_8440.jpg" width="100%" alt="">
+          <img async-src="img/Final/IMG_8440.jpg" width="100%" alt="">
         </div>
         <div class="col-md-4 m-0 p-0 bottle-item">
           <div class="hover-img">
             <h5 class="text-white hover-title">Til The Dusk</h5>
-            <img src="img/e.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
+            <img async-src="img/e.jpg" style="object-fit:contain;" width="100%" height="auto" width="100%" alt="">
           </div>
-          <img src="img/Final/IMG_8441.jpg" width="100%" alt="">
+          <img async-src="img/Final/IMG_8441.jpg" width="100%" alt="">
         </div>
       </div>
     </div>
@@ -234,7 +234,7 @@
     <div class="container pt-5">
       <div class="row">
         <div class="col-md-9">
-          <img src="img/Asset 52@2x.png" class="mb-3" width="150px">
+          <img async-src="img/Asset 52@2x.png" class="mb-3" width="150px">
           <p class="text-white"></p>
           <h4 class="contact-info text-white mb-3">Baho Road , 32 ward, Kamayut </h4>
           <h4 class="contact-info text-white mb-3">09-776045776 </h4>
