separated loading code from main.js

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
   <link disabled rel="stylesheet" href="css/loading-bar.css">
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
   <script  src="js/plugins.min.js"></script>
+  <script src="js/lottie.min.js"></script>
+  <script src="js/loading.js"></script>
   <!-- <script src="js/pace.js"></script> -->
   <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -259,7 +261,6 @@
       </div>
     </div>
   </footer>
-  <script src="js/lottie.min.js"></script>
   <script  src="js/main.js"></script>
   <script  src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.3.4/CSSRulePlugin.min.js"></script>
   <script src="" async defer></script>
