changed slick url

--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/slick.min.css">
   <link disabled rel="stylesheet" href="css/loading-bar.css">
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+   -->
   <script  src="js/plugins.min.js"></script>
   <script src="js/lottie.min.js"></script>
   <script src="js/loading.js"></script>
